--- a/LECTURE15.html
+++ b/LECTURE15.html
@@ -487,7 +487,8 @@ div.tocify {
 </div>
 
 
-<p>#Parameter estimation for wildlife population models!</p>
+<div id="parameter-estimation-for-wildlife-population-models" class="section level1">
+<h1>Parameter estimation for wildlife population models!</h1>
 <p>We have now gone through the basic mechanics of population modeling. But we have barely discussed where the parameter estimates come from!</p>
 <p>This is the focus of the current lecture!</p>
 <div id="data-requirements" class="section level2">
@@ -1034,6 +1035,7 @@ sd(Phi_by_year$estimate)</code></pre>
 <p>MARK is free software, and can be downloaded from <a href="http://warnercnr.colostate.edu/~gwhite/mark/mark.htm">here</a></p>
 <p>The demo from Lab 7 can be found <a href="LAB7.html#open-population_models">here</a></p>
 <p><a href="LECTURE16.html">–go to next lecture–</a></p>
+</div>
 </div>
 </div>
 
