--- a/LECTURE15.html
+++ b/LECTURE15.html
@@ -531,7 +531,7 @@ div.tocify {
 <div id="life-tables" class="section level3">
 <h3>Life tables</h3>
 <p>As you recall, classical life tables represent a single cohort that has been followed over time until the last one has died.</p>
-<p>NOTE: in practice, it is nearly impossible to follow a single cohort over time in the wild (although life tables are commonly available for captive populations). Therefore, in practice, most published life tables for wild populations use the <strong>static life table</strong>, which compares population size from multiple different cohort (across the entire range of ages), at a single point in time. Static life tables assume the population has a stable age structure —- that is, the proportion of individuals in each age class does not change from generation to generation. This assumption is often violated in natural populations, but in the absence of better data, this method can be better than nothing!</p>
+<p>NOTE: in practice, it is nearly impossible to follow a single cohort over time in the wild (although life tables are commonly available for captive populations). Therefore, in practice, most published life tables for wild populations use the <strong>static life table</strong>, which compares population size from multiple different cohorts (across the entire range of ages), at a single point in time. Static life tables assume the population has a stable age structure —- that is, the proportion of individuals in each age class does not change from generation to generation. This assumption is often violated in natural populations, but in the absence of better data, this method can be better than nothing!</p>
 <table>
 <thead>
 <tr class="header">
@@ -581,7 +581,7 @@ div.tocify {
 </tbody>
 </table>
 <p><strong>PROS</strong> - Summary of survival and fecundity schedules, often available in the literature. Be careful when using data from captive populations!</p>
-<p><strong>CONS</strong> - Makes unrealistic assumptions (especially the <em>static life table</em> method). - Can not be used to estimate environmental stochasticity - Can not be used to estimate density dependence - Ignores <strong>imperfect detection</strong><br />
+<p><strong>CONS</strong> - Makes unrealistic assumptions (especially the <em>static life table</em> method). - Can not be used to estimate environmental stochasticity - Can not be used to estimate density dependence - Ignores <strong>imperfect detection</strong> and the fact that some age classes are less detectable than others<br />
 - Remember, it’s not always perfectly straightforward to translate into a matrix-based (age-structured) population model- but it can be done!</p>
 </div>
 <div id="census-data" class="section level3">
@@ -598,7 +598,7 @@ div.tocify {
 <h3>Capture-mark-recapture (CMR)</h3>
 <p><strong>PROS</strong> - Can estimate survival, variation in survival, lambda, recruitment, dispersal rates. - Probably the most widely used source of data for population models!</p>
 <p><strong>CONS</strong> - Few downsides, although the analytical techniques can be difficult to master - Mounting a proper CMR study can be very costly, and require many years of data. - Estimating landscape-scale movements can require an even more costly and time-consuming study. - Emigration and survival can be difficult to tease apart in many cases.</p>
-<p>See below for more! Also this is the main focus of the Population Dynamics course (NRES 488, the next course in the wildlife ecology and conservation sequence!)</p>
+<p>See below for more! Also this is the main focus of the Population Dynamics course (NRES 488, the next course in the Wildlife Ecology and Conservation sequence!)</p>
 </div>
 <div id="data-on-spatial-structurehabitat" class="section level3">
 <h3>Data on spatial structure/habitat</h3>
@@ -701,7 +701,7 @@ div.tocify {
 <p>Each row in the following table represents a unique possible history of captures:</p>
 <p>A “1” indicates that an animal was successfully captured in a given year, and subsequently released.</p>
 <p>A “0” indicates that an animal was not successfully captured in a given year.</p>
-<p>A “2” indicates that an animal was successfully captured in a given year but was not released back into the population.</p>
+<p>A “2” indicates that an animal was successfully captured in a given year but was not released back into the population (probably died due to handling or capture).</p>
 <p><img src="caphist1.png" /></p>
 </div>
 <div id="two-main-types-of-cmr-analyses" class="section level3">
@@ -767,7 +767,7 @@ R = number of individuals in 2nd sample that are marked</p>
 <p>This can be written:</p>
 <p><span class="math inline">\(L_1 = \phi_1(1-p_2) \cdot \phi_2p_3 \cdot \left \{(1-\phi_3)+\phi_3(1-p_4) \right \}\)</span></p>
 <p><strong>Q</strong>: if survival were 100% and capture probability were 100%, what is the probability of observing the above capture histories?</p>
-<p><strong>Q</strong>: what about if survival were 100% and capture probability were 75%?</p>
+<p><strong>Q</strong>: what about if survival was 100% and capture probability was 75%?</p>
 <p>Maximum likelihood estimation is the process of finding those values of the parameters <span class="math inline">\(\phi\)</span> and <span class="math inline">\(p\)</span> that would be most <em>likely</em> to generate the observed capture histories!</p>
 <p>This model is known as the <em>Cormack-Jolly-Seber</em> model (CJS), and is the most common analysis performed by Program MARK.</p>
 <p><strong>Q</strong>: Why is <span class="math inline">\(\phi\)</span> also known as “apparent” survival? Why is it not “true” survival???</p>
