--- a/FINAL_PROJECTS.html
+++ b/FINAL_PROJECTS.html
@@ -482,7 +482,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Final projects!</h1>
 <h4 class="author">NRES 470/670</h4>
-<h4 class="date">Spring, 2020</h4>
+<h4 class="date">Spring 2020</h4>
 
 </div>
 
@@ -544,16 +544,17 @@ div.tocify {
 <div id="third-project-related-assignment-the-written-project-rough-draft" class="section level2">
 <h2>Third project-related assignment: the written project (rough draft)!</h2>
 <p>Your final written paper is expected to be in the style of a <strong>scientific manuscript</strong>. That is, it should have an <em>introduction</em>, <em>methods</em>, <em>results</em> and <em>discussion</em> sections, and should cite relevant literature.</p>
+<p><strong>There are no formatting guidelines or page limits</strong>. Please be as concise as possible while still covering all the key elements in the rubric. You can use any standard format for your references, all we ask is that you be consistent!</p>
 <div id="introduction" class="section level3">
 <h3>Introduction</h3>
-<p>This is where you introduce the topic and describe why it’s important. You can recycle and flesh out the material from your proposal!</p>
-<p>Remember to cite literature here!</p>
+<p>This is where you introduce the topic and describe why it’s important. You should also include your research questions here, along with any hypotheses that you are testing. You can recycle and flesh out the material from your proposal! This should be at least a 2-3 paragraphs.</p>
+<p>Remember to cite literature here (and use a consistent format)!</p>
 </div>
 <div id="methods" class="section level3">
 <h3>Methods</h3>
 <p>This is where you describe your PVA in enough detail that it <em>could be replicated</em> by another wildlife researcher! You can recycle much of your “initial PVA” assignment here.</p>
 <p>Remember to justify all your decisions in terms of parameterization.</p>
-<p>Also, you should describe how you addressed your main questions</p>
+<p>Also, you should describe how you addressed the research questions you introduced in the introduction section (above)</p>
 <ul>
 <li><p>What different scenarios did you run?</p></li>
 <li>How did you use the simulation results to address your questions?
@@ -566,7 +567,7 @@ div.tocify {
 </div>
 <div id="results" class="section level3">
 <h3>Results</h3>
-<p>This is where you describe and present the relevant outputs from your model. Provide figures and tables to summarize your <em>relevant</em> results.</p>
+<p>This is where you describe and present the relevant outputs from your model (mostly can be recycled from your ‘final PVA’ assignment). Provide figures and tables to summarize your <em>relevant</em> results. You should include at least 2-3 figures as part of your results section. Each figure should have an informative caption placed directly below the figure.</p>
 <p>With PVA it can be difficult to decide what to present and what not to present. Always ask yourself: is it <em>relevant</em> to your main questions?</p>
 </div>
 <div id="discussion" class="section level3">
@@ -583,7 +584,7 @@ div.tocify {
 </div>
 <div id="fourth-project-related-assignment-the-oral-presentation" class="section level2">
 <h2>Fourth project-related assignment: the oral presentation!</h2>
-<p>Your group presentation should be in the style of an oral presentation at a conference.</p>
+<p>Your group presentation should be in the style of an oral presentation at a conference. See below for guidance on giving a good oral presenation!</p>
 <p>Presentations will take place during our final two lab periods.</p>
 <p>You will have 15 minutes to give your presentations, with at least 3 additional minutes for questions.</p>
 <p>We will hand out a simple peer-review form so you can give feedback to your peers.</p>
@@ -633,7 +634,7 @@ div.tocify {
 <ul>
 <li><p>Tell your audience why they should care!! All of you are working with interesting species, and all of you are asking interesting questions. All of your audience is interested in wildlife conservation and management. There is absolutely no reason why you shouldn’t be able to convince your audience to care about what you have to say!!</p></li>
 <li><p>Cite previous research as you set up your research question. Convince us that your research fills a key knowledge gap. What is the overall context of your research?</p></li>
-<li><p>After you have framed the problem, clearly state your research questions!</p></li>
+<li><p>After you have framed the problem, <em>clearly state your research questions</em>!</p></li>
 </ul>
 </div>
 <div id="methods-1" class="section level4">
