--- a/LECTURE18.html
+++ b/LECTURE18.html
@@ -489,62 +489,57 @@ div.tocify {
 
 <div id="upcoming-final-exam" class="section level3">
 <h3>Upcoming final exam</h3>
-<p><strong>when and where</strong> The final exam is coming up on Friday <strong>May 8</strong> (9:50am to 11:50 in our regular classroom). You will have the whole two hour period to take the exam (but you should not need the whole period).</p>
+<p><strong>when and where</strong> The final exam is coming up on Friday <strong>May 8</strong> (9:50am to 11:50). You will have the whole two hour period to take the exam (but you should not need the whole period).</p>
 <p><strong>what</strong> The exam will cover all material covered in lectures and lab.</p>
 <ul>
 <li>All material in Chapters 1-6 of the Gotelli book
 <ul>
-<li>Exponential pop growth</li>
-<li>Density-dependent pop growth</li>
-<li>Age-structured pop growth</li>
-<li>Metapopulations (additional suggested reading: <a href="griffin1.pdf">Griffin et al. 2008</a>)</li>
-<li>Competition</li>
-<li>Predation</li>
+<li>Exponential pop growth ([Gotelli Ch. 1], <a href="LECTURE2.html">lecture</a>, <a href="LAB1.html">lab</a>)</li>
+<li>Density-dependent pop growth (Gotelli Ch. 2, <a href="LECTURE3.html">lecture</a>, <a href="LECTURE4.html">lecture</a>, <a href="LECTURE5.html">lecture</a>, <a href="LAB2.html">lab</a>)</li>
+<li>Age-structured pop growth and matrix population models (Gotelli Ch. 3; <a href="LECTURE6.html">lecture</a>, <a href="LECTURE7.html">lecture</a>, <a href="LAB3.html">lab</a>, <a href="LAB4.html">lab</a> additional suggested reading: <a href="heppell1.pdf">Heppell et al. 1998</a>)</li>
+<li>Metapopulations (Gotelli Ch. 4, <a href="LECTURE13.html">lecture</a>, <a href="LAB6.html">lab</a>; additional suggested reading: <a href="griffin1.pdf">Griffin et al. 2008</a>)</li>
+<li>Competition (Gotelli Ch. 5, <a href="LECTURE16.html">lecture</a>)</li>
+<li>Predation (Gotelli Ch. 6, <a href="LECTURE17.html">lecture</a>)</li>
 </ul></li>
-<li><em>Systems thinking and modeling</em> (Ch. 1, 2, and 10 of <a href="http://beyondconnectingthedots.com/">“Beyond Connecting the Dots”</a>)</li>
-<li><em>Individual-based models</em> (IBM) (Ch. 10 of “Beyond Connecting the Dots”).</li>
+<li><em>Systems thinking and modeling</em> (<a href="LECTURE1.html">lecture</a>, Ch. 1, 2 of <a href="http://beyondconnectingthedots.com/">“Beyond Connecting the Dots”</a>)</li>
 <li>Basic computer programming (e.g., if-then-else statements)</li>
-<li><em>Application of matrix population models to conservation and management</em> (including <a href="heppell1.pdf">Heppell 1998</a>)</li>
-<li><em>Stochasticity and Uncertainty</em>, including <a href="lande.pdf">Lande 1992</a>, <a href="Regan_2002.pdf">Regan 2002</a> and all material covered in lecture and lab.</li>
-<li><em>Small-population paradigm and declining-population paradigm</em> (including <a href="beissinger1.pdf">Beissinger and Westphal 1998</a>, <a href="caughley1.pdf">Caughley 1988</a>)<br />
+<li><em>Stochasticity and Uncertainty</em> (<a href="LECTURE8.html">lecture</a>, <a href="LAB5.html">lab</a>, suggested readings: <a href="lande.pdf">Lande 1992</a>; <a href="Regan_2002.pdf">Regan 2002</a>.</li>
+<li><em>Small-population paradigm and declining-population paradigm</em> (<a href="LECTURE9.html">lecture</a>, <a href="LECTURE11.html">lecture</a>, suggested reading: <a href="caughley1.pdf">Caughley 1988</a>)<br />
 </li>
-<li><em>Population Viability Analysis</em>, in theory and practice</li>
-<li><em>Parameter estimation for PVA</em> (including basic capture-recapture methods) (helpful reading: <a href="amstrup1.pdf">Amstrup et al</a>)</li>
+<li><em>Population Viability Analysis</em>, in theory and practice (<a href="LECTURE12.html">lecture</a>, suggested reading <a href="beissinger1.pdf">Beissinger and Westphal 1998</a>, <a href="LECTURE14.html">optional lecture</a>)</li>
+<li><em>Parameter estimation for PVA</em>, including basic capture-recapture methods (<a href="LECTURE15.html">lecture</a>, suggested reading: <a href="amstrup1.pdf">Amstrup et al</a>)</li>
 </ul>
-<p><em>The exam will consist of a mixture of multiple-choice and short-answer questions.</em></p>
+<p>NOTE: we skipped over the <a href="LECTURE10.html">lecture on individual-based models</a>- this topic will (of course) <em>not be included on the final exam</em></p>
+<p><em>The exam will consist of a mixture of multiple-choice and short-answer questions (including a few definitions).</em></p>
 </div>
 <div id="final-logistics" class="section level3">
 <h3>Final logistics</h3>
-<div id="presentations" class="section level4">
-<h4>Presentations</h4>
+<div id="final-exam" class="section level4">
+<h4>Final exam</h4>
 <ul>
-<li>Please send me a copy of your final project presentation PowerPoint or Google slides if you haven’t already (upload to WebCampus)</li>
+<li>This Friday, May 8 from 9:50-11:50 (via zoom/tophat)</li>
 </ul>
 </div>
 <div id="final-papers" class="section level4">
 <h4>Final papers</h4>
 <ul>
-<li>Should receive written feedback by Friday May 1.</li>
+<li>Everyone should have received detailed feedback over the weekend - please let us know if you have any questions.</li>
+<li>Final papers due May 13 at 5pm (webcampus submission)</li>
 </ul>
 </div>
 <div id="extra-credit" class="section level4">
 <h4>Extra credit</h4>
 <ul>
 <li>Will accept up to four extra credit write-ups (two presentations and two papers)</li>
-<li>Due when final papers are due (May 13).</li>
+<li>Submit extra credit assignments via webcampus (file submission) – one submission per each of the four ‘assignments’.</li>
+<li>Due when final papers are due, by the end of finals period (Wed May 13 at 5pm).</li>
 </ul>
 </div>
 <div id="office-hoursstudy-session" class="section level4">
 <h4>Office hours/Study session</h4>
 <ul>
-<li>Wed 5/6 at 4pm via zoom</li>
+<li>Wed 5/6 at 10am via zoom (regular class time, zoom link sent via email and webcampus announcement)</li>
 </ul>
-</div>
-<div id="discussion-modeling-in-the-bigger-context" class="section level4">
-<h4>DISCUSSION: Modeling in the bigger context</h4>
-</div>
-<div id="discussion-suggestions-for-improving-nres-470670" class="section level4">
-<h4>DISCUSSION: Suggestions for improving NRES 470/670</h4>
 </div>
 <div id="please-fill-out-your-course-evaluations" class="section level4">
 <h4>PLEASE fill out your course evaluations!</h4>
